Compiler/fasto/tests/scan_neg3.err
Type error: Scan: unexpected accumulator element type int, expected bool at line 4, column 11