Compiler/fasto/tests/scan_neg3.fo
fun bool and (bool a, bool b) = a && b

fun int main () = 
  let a = scan (and, 0, {false, true, false}) in 0